scrollbar bug removed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,6 +454,7 @@ Navbar Area CSS
 
 .dibiz-nav .navbar .navbar-nav {
   margin-left: auto;
+  margin-right: 50px;
 }
 
 .dibiz-nav .navbar .navbar-nav .nav-item {
